<resources>
    <string name="bg_timeout"><b>Time out:</b>\nDuring insertion of test strip. Please start the measurement using a new test strip.</string>
    <string name="bg_timeout_tryagain"><b>Time out:</b>\nDuring placement of blood sample. Please start the measurement using a new test strip.</string>
    <string name="instruction_insert_strip">Insert the strip in device BG slot.</string>
    <string name="instruction_drop_blood">Please wait for the beep and place a drop of blood on the mark of the inserted strip.</string>
    <string name="instruction_ctl_sol_drop_blood">Please wait for the beep and place a drop of control solution on the mark of the strip inserted.</string>
    <string name="bg_normal_error"><b>Error:</b>\nEncountered an error in blood sugar measurement.</string>
    <string name="bg_self_check_err"><b>Error:</b>\nBG module installation. Please verify the BG module installation and firmware version.</string>
    <string name="bg_strip_removed_too_soon"><b>Error:</b>\nWe notice that you removed the strip too soon, before the measurement was completed. Please start the measurement using a new test strip.</string>
    <string name="bg_blood_applied_too_soon"><b>Error:</b>\nWe notice that you placed the blood sample too soon, wait for the beep before placing the sample. Please start the measurement using a new test strip.</string>
    <string name="bg_strip_contaminated"><b>Error:</b>\nTest strip is contaminated or damaged. Please start the measurement using a new test strip.</string>
    <string name="bg_not_enough_blood"><b>Error:</b>\nInsufficient quantity of blood to perform the measurement. Please start the measurement using a new test strip with a sufficient quantity of blood drop.</string>
    <string name="bg_battery_low"><b>Error:</b>\nDevice is low on battery, please charge before performing the measurement.</string>
    <string name="bg_wrong_strip_type"><b>Error:</b>\nTest strip is contaminated or damaged. Please start the measurement using a new test strip.</string>
    <string name="bg_high_ambient_temparature"><b>Error:</b>\nWe notice that the surrounding environment is too hot for BG measurement. We suggest you move to a cooler surroundings and start the measurement using a new test strip.</string>
    <string name="bg_low_ambient_temparature"><b>Error:</b>\nWe notice that the surrounding environment is too cold for BG measurement. We suggest you move to a warmer surroundings and start the measurement using a new test strip.</string>
    <string name="bg_glucose_high"><b>Error:</b>\nWe notice that the blood sugar is out of range. Try measuring again with a new test strip. If you notice this error continuously call %1$s.</string>
    <string name="bg_glucose_low"><b>Error:</b>\nWe notice that the blood sugar is out of range. Try measuring again with a new test strip. If you notice this error continuously call %1$s.</string>
    <string name="device_off"><b>Error:</b>\nYour device is either not switched on or not connected to the app. Please switch on the device and wait for it to connect to the app.</string>
    <string name="service_charge_info">You have selected the payment mode as %1$s.</string>
    <string name="payment_mode_with_wallet_info">You have selected the payment mode as %1$s.\n\n Your current wallet balance: Rs. %2$s</string>
    <string name="consult_doc_result">Your consultation request has been created and assigned to the specialist.\n\n<b>Ref ID #%1$d.</b>\n\n In case of an emergency  please call %2$s.</string>
    <string name="tncn_text">To access the application, you need to <b>read and accept</b> the following:</string>
    <string name="tncn_check">I understand and accept the \"Terms and conditions\" and \"Privacy consent\".</string>
    <string name="discard_confirmation">Are you sure you want to discard the measurement?</string>
    <string name="no_subscriptions_found">You have not subscribed to any services. Please subscribe to the services by visiting %1$s or call %2$s.</string>
    <string name="unable_to_save"><b>Error:</b>\nWe are unable to upload the measurement, please try again after some time. If you notice this error continuously, please call %1$s.</string>
    <string name="deactive_account">We notice that your account is inactive. So you cannot upload the data to cloud. Please call %1$s</string>
    <string name="successfully_saved">Your measurement is uploaded successfully.</string>
    <string name="cancel_measurement">Are you sure you want to cancel the measurement?</string>
    <string name="unable_to_find_southfalls"><b>Error:</b>\nUnable to connect to the device, please check whether bluetooth is enabled and the device is near your phone.</string>
    <string name="unable_to_connect_southfalls"><b>Error:</b>\nUnable to connect to the device, please check whether bluetooth is enabled and the device is near your phone.</string>
    <string name="pin_successfully_changed">Your PIN is changed successfully. Please re-launch the application and restart your device to connect using the new PIN.</string>
    <string name="remeasure_ecg">We notice an error in the ECG measurement. Do you want to re-measure?</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="skip_confirmation"><b>Info:</b>\nYou will have to login to upload / view the measurements.</string>
    <string name="activity_running">We notice that your activity measurement is on.
        Do you want to stop the measurement?</string>
    <string name="delete_consfirmation">Are you sure you want to delete?</string>
    <string name="diagnosis_received">1 new feedback received. Do you wish to view it now?</string>
    <string name="enter_currect_mobile_no">Enter the correct mobile number.</string>
    <string name="password_empty">Please enter the Password.</string>
    <string name="password_incorrect_length">Password length should be minimum of 8 characters.</string>
    <string name="conf_password_empty">Please enter "Confirm password."</string>
    <string name="pass_and_conf_same">Password and confirm password must be the same.</string>
    <string name="user_id_empty">Please enter the User ID.</string>
    <string name="user_id_incorrect_length">User Id length should be minimum of 6 characters.</string>
    <string name="name_empty">The field "name" cannot be empty.</string>
    <string name="valid_name">Please enter a valid name.</string>
    <string name="valid_height">Please enter a valid height.</string>
    <string name="valid_weight">Please enter a valid weight.</string>
    <string name="valid_age">Please enter a valid Age.</string>
    <string name="device_charging">Device is charging.</string>
    <string name="please_cant_default">New PIN cannot be same as the default PIN.</string>
    <string name="quick_registration">Account registration is successful. You can access the services once your account is approved by the administrator. For any help please call %1$s.</string>
    <string name="member_registration">You have successfully added a member. Please share the credentials to your member to update their information.</string>
    <string name="current_password_empty">The field "Current Password" cannot be empty.</string>
    <string name="new_password_empty">The field "New Password" cannot be empty.</string>
    <string name="confirm_new_password_empty">The field "Confirm new password" cannot be empty.</string>
    <string name="change_password_info">We notice that this is your first login. For security reasons please change your password.</string>
    <string name="password_expired_info">We notice that your password is expired. Please change your password.</string>
    <string name="newpass_and_conf_newpass_same">New password and confirm new password must be the same.</string>
    <string name="currpass_and_newpass_same">Current password cannot be same as the new password.</string>
    <string name="session_expired">Your session expired. Please login again.</string>
    <string name="http_auth_fail">Please enter a valid user-id and password.</string>
    <string name="http_bad_request">Bad request. Request from client is not valid.</string>
    <string name="http_method_not_supported">Method not supported.</string>
    <string name="http_server_down">Server error occurred and the processing could not be completed at this point in time.</string>
    <string name="http_connection_down">There is no network connection right now. Please try again later.</string>
    <string name="http_general_error">Unable to connect to server. Please try again later.</string>
    <string name="consult_prompt">Your measurement is uploaded successfully with id: %1$d\n\nDo you wish to consult the specialist for this measurement?\n\nConsultation fee: Rs. %2$d \nSLA: %3$d mins.</string>
    <string name="consult_prompt_with_cc_sla">Your measurement is uploaded successfully with id: %1$d\n\nDo you wish to consult the specialist for this measurement?\n\nConsultation fee: Rs. %2$d \nSLA: %3$d mins.\n\nIn case the hospital SLA is crossed, you will receive the advisory from call center in %4$d mins.</string>
    <string name="record_saved_only_prompt">Your measurement is uploaded successfully with id: %d</string>
    <string name="bg_consult_prompt">Do you wish to consult the specialist for this measurement?\n\nConsultation fee: Rs. %1$d \nSLA: %2$d mins.</string>
    <string name="bg_consult_prompt_with_cc_sla">Do you wish to consult the specialist for this measurement?\n\nConsultation fee: Rs. %1$d \nSLA: %2$d mins.\n\nIn case the hospital SLA is crossed, you will receive the advisory from call center in %3$d mins.</string>
    <string name="successfully_changed_mobile_no">Your mobile number is changed successfully.</string>
    <string name="ht_wt_info">Recorded Info: \n Your Height is %1$s\n\n and Your weight is %2$s kg</string>
    <string name="pass_hint">(Password must be atleast 8 characters in length. Use a password with a mix of letters, numbers and symbols)</string>
    <string name="pass_reset_sucsess">Your new password has been sent via sms. Use the new password to login.</string>
    <string name="valid_url">Server address needs to begin with either https:// or http://</string>
    <string name="server_address_save">Server address changed. Please login again.</string>
    <string name="https_not_suppoted">https:// version not supported,\nPlease try with http://</string>
    <string name="title_app_name">ConsumerApp Lite</string>
    <string name="title_profile">User Profile</string>
    <string name="title_device_configuration">Server Configuration</string>
    <string name="ecg_start_step_msg">Relax and start step %d</string>
    <string name="ecg_step_1">1</string>
    <string name="ecg_step_2">2</string>
    <string name="ecg_step_3">3</string>
    <string name="ecg_step_4">4</string>
    <string name="title_tnc">Terms and conditions</string>
    <string name="title_privacy">Privacy consent</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bg_calibration">Blood glucose calibration</string>
    <string name="image_desc">image</string>
    <string name="change_mobile_no">Change mobile number</string>
    <string name="dob">DOB</string>
    <string name="delete_pair">Remove paired device</string>
    <string name="logout">Sign out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_members">My Members</string>
    <string name="personal_details"><b>Personal Details</b></string>
    <string name="finish_account"><b>Finish Account</b></string>
    <string name="update_profile">Update Profile</string>
    <string name="update_address">Update Address</string>
    <string name="update_emergency_contact">Update Emergency Contact</string>
    <string name="about">About</string>
</resources>