<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/my_members"
        android:icon="@drawable/ic_social_add_person"
        android:title="@string/my_members"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_social_person"
        android:title="@string/title_profile"/>
    <item
        android:id="@+id/deviceConfig"
        android:icon="@drawable/app"
        android:title="@string/title_device_configuration"/>
    <item
        android:id="@+id/bg_calibration"
        android:icon="@drawable/ic_title_bloodsugar"
        android:title="@string/bg_calibration"/>
   <!-- <item
        android:id="@+id/update_profile"
        android:icon="@drawable/ic_content_edit"
        android:title="@string/update_profile"/>-->
    <item
        android:id="@+id/delete_pair_item"
        android:icon="@drawable/ic_status_bt_pairing_on"
        android:title="@string/delete_pair"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"/>
    
    <item
        android:id="@+id/about"
        android:icon="@drawable/help"
        android:title="@string/about"/>

</menu>