<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_my_members"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_social_add_person"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/my_members"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_profile"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_social_person"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/title_profile"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_device_configuration"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/app"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/title_device_configuration"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_bg_calibration"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_title_bloodsugar"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/bg_calibration"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_update_profile"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_content_edit"
            android:gravity="center_vertical"
            android:text="@string/update_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_remove_paried_device"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_status_bt_pairing_on"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/delete_pair"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_about"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/help"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_signout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:drawableLeft="@drawable/logout"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>