<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/steps_info_tab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_tab_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/ecg_tab_height"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_weight="1"
            android:background="@drawable/ic_ecg_tab_left_active"
            android:text="@string/ecg_step_1"
            android:textColor="@color/reading_color"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/btn_tab_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/ecg_tab_height"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_weight="1"
            android:background="@drawable/ic_ecg_tab_center_inactive"
            android:text="@string/ecg_step_2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/btn_tab_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/ecg_tab_height"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_weight="1"
            android:background="@drawable/ic_ecg_tab_center_inactive"
            android:text="@string/ecg_step_3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/btn_tab_4"
            android:layout_width="0dp"
            android:layout_height="@dimen/ecg_tab_height"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_weight="1"
            android:background="@drawable/ic_ecg_tab_right_inactive"
            android:text="@string/ecg_step_4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/img_ecg_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/steps_info_tab"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:layout_marginLeft="@dimen/default_margin_left"
        android:layout_marginRight="@dimen/default_margin_right"
        android:background="@drawable/ic_ecg_steps_bg"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_ecg_step_info"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_weight=".9"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:src="@drawable/ic_ecg_step1" />

        <TextView
            android:id="@+id/txt_ecg_step_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_margin_left"
            android:layout_marginRight="@dimen/default_margin_right"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_weight=".1"
            android:layout_gravity="center"
            android:text="@string/ecg_start_step_msg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</RelativeLayout>