<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_change_mobile_number"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/change_mobile_no"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_update_address"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/update_address"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_emergency_contact"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@xml/single_listview_style"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/update_emergency_contact"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>